--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,11 @@
 .Cards-position {
   display: flex;
 }
+
+.Notification-text {
+  margin-left: 40px;
+  background-color: red;
+  color: white;
+  padding: 10px;
+  width: 50vw;
+}
